# Pokemons

./: .travis.yml  CMakeLists.txt  README.md  README.rst  installPokemons-linux.sh  main.cpp  mainForTest.cpp  test.cpp
Pokemons/: Player.h  Pokemon.h  World.h
PokemonsGame/: Ability.h  Battle.h  Game.h  Inventory.h  Item.h  Location.h  Player.h  Pokemon.h  World.h  pokedex.txt
ci/travis/install/: install-linux.sh
sources/: abilities.txt  locations.txt  pokedex.txt
